<resources>
    <string name="app_name">Pomodoro</string>
    <string name="tab_text_pomo">뽀모도로</string>
    <string name="tab_text_report">리포트</string>
    <string name="tab_text_preference">설정</string>

    <string name="empty_pomodoro_title">제목을 입력해주세요.</string>
    <string name="empty_pomodoro_tag">태그를 선택해주세요</string>
    <string name="empty_pomodoro_count_message">목표 횟수를 입력해주세요</string>
    <string name="empty_duedate_message">작업 완료 날짜를 선택해주세요</string>
    <string name="empty_user_nickname">닉네임을 입력해주세요.</string>

    <string name="wrong_user_nickname_length">2글자 이상, 16글자 이하의 닉네임을 입력해주세요.</string>
    <string name="wrong_pomodoro_goal_count">1이상의 숫자를 입력해주세요</string>
    <string name="notification_timer_name">타이머</string>

    <string name="setup_title_1">닉네임을 만들어주세요</string>
    <string name="setup_sub_title_1">2글자 이상으로 부탁해요 :)</string>
    <string name="setup_sub_title_2">없다면 넘어가도 괜찮아요</string>
    <string name="setup_sub_title_3">제작자들의 목표 집중시간은 8시간이랍니다</string>

    <string name="btn_has_duedate">매일매일</string>
    <string name="btn_has_not_duedate">오늘 하루만</string>

    <string name="notification_title">뽀모도로 타이머</string>
    <string name="notification_text">타이머가 실행중입니다. </string>

    <string name="timer_end">타이머가 종료되었습니다.</string>
    <string name="timer_running">타이머가 실행되고 있습니다.</string>
    <string name="timer_restart">계속</string>
    <string name="timer_stop">일시정지</string>
    <string name="timer_cancel">취소</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_pomodoro">flying</string>
    <string name="title_report">리포트</string>
    <string name="title_preference">설정</string>


    <string name="prefer_pomodoro_time">뽀모도로 시간</string>
    <string name="prefer_short_time">짧은 휴식</string>
    <string name="prefer_long_time">긴 휴식</string>
    <string name="prefer_long_term">긴 휴식 간격</string>
    <string name="prefer_timer_autoskip">자동으로 뽀모도로 넘김</string>
    <string name="prefer_rest_autostart">자동으로 휴식 시작</string>
    <string name="prefer_timer_nonrest">휴식없이 무한 질주</string>
    <string name="prefer_fq">F&amp;Q</string>
    <string name="prefer_invite_friend">친구 초대</string>
    <string name="prefer_logout">로그아웃</string>


    <string name="pomo_state_stopover">Stop over</string>
    <string name="pomo_state_mealtime">Meal time</string>



</resources>