<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">



    <data>
        <import type="android.view.View"/>
        <variable
            name="clickListener"
            type="android.view.View.OnClickListener"/>
        <variable
            name="viewModel"
            type="com.yodi.flying.features.preference.PreferenceViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:tag="0dp">


        <TextView
            android:id="@+id/user_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="주연님"
            android:textColor="#222222"

            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/total_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="20"
            android:textColor="@color/flying_orange"
            android:textSize="16sp"

            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_nickname" />

        <TextView
            android:id="@+id/total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="180h 30m"
            android:textColor="@color/flying_orange"

            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="일째"
            android:textColor="@color/flying_orange"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@+id/total_date"
            app:layout_constraintStart_toEndOf="@+id/total_date" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="동안 집중했어요"
            android:textColor="@color/flying_orange"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@+id/total_time"
            app:layout_constraintStart_toEndOf="@+id/total_time" />


        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="36dp"
            android:text="타이머"
            android:textColor="#222222"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total_date" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/text_gray_light"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:layout_editor_absoluteX="-16dp" />


        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="32dp"
            android:text="그 외"
            android:textColor="#222222"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/text_gray_light"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="15dp"
            android:text="@string/prefer_pomodoro_time"
            android:textColor="#222222"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="24dp"
            android:text="@string/prefer_short_time"
            android:textColor="#222222"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="24dp"
            android:text="@string/prefer_long_time"
            android:textColor="#222222"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="24dp"
            android:text="@string/prefer_long_term"
            android:textColor="#222222"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="24dp"
            android:text="@string/prefer_timer_autoskip"
            android:textColor="#222222"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="24dp"
            android:text="@string/prefer_rest_autostart"
            android:textColor="#222222"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="24dp"
            android:text="@string/prefer_timer_nonrest"
            android:textColor="#222222"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:text="@string/prefer_fq"
            android:textColor="#222222"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:text="@string/prefer_invite_friend"
            android:textColor="#222222"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@+id/imageView4" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:text="@string/prefer_logout"
            android:textColor="#222222"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintStart_toEndOf="@+id/imageView5" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/user_nickname"
            app:layout_constraintStart_toEndOf="@+id/user_nickname"
            app:srcCompat="@drawable/ic_edit" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2"
            app:srcCompat="@drawable/ic_f_q" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:srcCompat="@drawable/ic_invite" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:srcCompat="@drawable/ic_logout" />


        <TextView
            android:id="@+id/text_running_time"
            android:layout_width="35dp"
            android:layout_height="25dp"
            android:layout_marginEnd="8dp"
            android:inputType="numberDecimal"
            android:text="@{viewModel.runningTimeString}"
            android:textColor="@color/text_gray_light"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@+id/textView12"
            app:layout_constraintEnd_toStartOf="@+id/running_time_button"
            app:layout_constraintTop_toTopOf="@+id/textView12"
            app:layout_constraintVertical_bias="0.25" />


        <TextView
            android:id="@+id/text_short_rest_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@{viewModel.shortRestTimeString}"
            android:textColor="@color/text_gray_light"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@+id/textView13"
            app:layout_constraintEnd_toStartOf="@+id/short_rest_button"
            app:layout_constraintTop_toTopOf="@+id/textView13"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/short_rest_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{clickListener}"
            android:paddingRight="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/text_short_rest_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_short_rest_time"
            app:srcCompat="@drawable/ic_keyboard_arrow_down" />


        <ImageView
            android:id="@+id/running_time_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{clickListener}"
            android:paddingRight="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/text_running_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_running_time"
            app:srcCompat="@drawable/ic_keyboard_arrow_down" />

        <ImageView
            android:id="@+id/long_rest_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{clickListener}"
            android:paddingRight="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/text_long_rest_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_long_rest_time"
            app:srcCompat="@drawable/ic_keyboard_arrow_down" />

        <ImageView
            android:id="@+id/long_term_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{clickListener}"
            android:paddingRight="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/text_long_rest_term"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_long_rest_term"
            app:srcCompat="@drawable/ic_keyboard_arrow_down" />

        <TextView
            android:id="@+id/text_long_rest_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@{viewModel.longRestTimeString}"
            android:textColor="@color/text_gray_light"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@+id/textView14"
            app:layout_constraintEnd_toStartOf="@+id/long_rest_button"
            app:layout_constraintTop_toTopOf="@+id/textView14"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/text_long_rest_term"
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_marginEnd="8dp"
            android:text="@{viewModel.longRestTermString}"
            android:textColor="@color/text_gray_light"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="@+id/textView15"
            app:layout_constraintEnd_toStartOf="@+id/long_term_button"
            app:layout_constraintTop_toTopOf="@+id/textView15"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>